--- a/challenges/ep2.yml
+++ b/challenges/ep2.yml
@@ -201,7 +201,6 @@ readingformdata_playingwithservercoding:
         browser:
             default_uri: /new_toy.php
     grading:
-#$htmlGrader->assertOutputContains('');
         look_for_server:
             type: php
             assertTrue: input("new_toy.php") matches "/$_SERVER/"
@@ -211,6 +210,68 @@ readingformdata_playingwithservercoding:
             assertTrue: input("new_toy.php") matches "/HTTP_USER_AGENT/"
             failure: I don't see `$_SERVER['HTTP_USER_AGENT']` in your file
         look_for_post:
-            type: php
-            assertTrue: body("new_toy.php") matches "/Mozilla\/5.0 (iPad; U; CPU OS 3_2_1 like Mac OS X; en-us) AppleWebKit\/531.21.10/"
+            type: http
+            assertTrue: body() matches "/Mozilla\/5.0 (iPad; U; CPU OS 3_2_1 like Mac OS X; en-us) AppleWebKit\/531.21.10/"
             failure: Are you printing the `$_SERVER['HTTP_USER_AGENT']`?
+
+savingpets_formsubmitlogiccoding:
+    question: >
+        Let's finish the form submit logic! Fetch the existing pet toys with the `get_great_pet_toys()`
+        function, add the new toy to the array, then save the JSON back to `toys.json`. To
+        prove it's working, read the file again with `file_get_contents()` and `var_dump()`
+        that JSON string.
+    step: ~
+    files:
+        new_toy.php: ~
+        functions.php:
+            read_only: true
+        toys.json:
+            read_only: true
+    features:
+        editor: ~
+        browser:
+            default_uri: /new_toy.php
+    grading:
+        look_for_json_encode:
+            type: php
+            assertTrue: input("new_toy.php") matches "/json_encode(/"
+            failure: Use `json_encode()` in `new_toy.php` to encode the toys array before saving it
+        look_for_file_put_contents:
+            type: php
+            assertTrue: input("new_toy.php") matches "/file_put_contents(/"
+            failure: Use `file_put_contents()` in `new_toy.php` to save the new JSON string
+        look_for_var_dump:
+            type: php
+            assertTrue: input("new_toy.php") matches "/var_dump(/"
+            failure: `var_dump()` the file contents of `toys.json` after saving the new toy
+        look_for_function:
+            type: php
+            assertTrue: input("new_toy.php") matches "/get_great_pet_toys(/"
+            failure: Call `get_great_pet_toys()` first to get the existing toys
+        look_for_text_1:
+            type: http
+            assertTrue: body() matches "/Bacon Bone/"
+            failure: I don't see `Bacon Bone` in `toys.json` - double-check that you're keeping the original pets, not replacing them entirely.
+        look_for_text_2:
+            type: http
+            assertTrue: body() matches "/Fluffy Pig Stuffed Animal/"
+            failure: I don't see the new "Fluffy Pig" toy in `toys.json`. Are you adding it to the toys array before calling `json_encode()` and saving the file?
+
+savingpets_jsonencodereadablemc:
+    question: >
+        Which of the following will cause `json_encode()` to give us a pretty, more-readable
+        version of the JSON?
+    explanation: >
+        `JSON_PRETTY_PRINT` is called a "constant": it's like a variable, except that
+        it has no `$` in front of it, cannot be changed, and is available everywhere.
+        You can create your own constants (see PHP's `define()` function), but some, like
+        this one, are available everywhere.
+    features:
+        multiple_choice:
+            choices:
+                a: `json_encode($toys, JSON_PRETTY_PRINT);`
+                b: `json_encode($toys, 'JSON_PRETTY_PRINT');`
+                c: `json_encode($toys, $JSON_PRETTY_PRINT);`
+                d: `json_encode($toys, JSON_PRETTY_PRINT());`
+            correct: a
+    grading: []
