--- a/challenges/ep2.yml
+++ b/challenges/ep2.yml
@@ -275,3 +275,100 @@ savingpets_jsonencodereadablemc:
                 d: `json_encode($toys, JSON_PRETTY_PRINT());`
             correct: a
     grading: []
+
+artofredirecting_formsubmitredirectmc:
+    question: After a successful form submit, we always redirect the user to another page. Why?
+    explanation: >
+        Why do we redirect after a successful form submit? The reason isn't that technical:
+        you don't *have* to redirect the user. But, when you do, if the user refreshes their
+        page after the redirect, it will just reload that new page. If you *don't* redirect
+        (e.g. you display a thanks message on the same page that handled your form), the user
+        can refresh the page, which will re-submit the data: i.e. re-send the POST request
+        with all the data. This will cause the whole form to be re-processed. You probably
+        don't want that :).
+    features:
+        multiple_choice:
+            choices:
+                a: Redirecting prevents the user from accidentally re-submitting the form
+                b: >
+                    POST requests (which most form submits are) cannot have responses with content,
+                    so we need to redirect to another page
+                c: Redirecting prevents the form from being re-populated with the same data
+                d: Some older browsers cannot properly handle a form submit, unless it redirects
+            correct: a
+    grading: []
+
+artofredirecting_redirectusertoylistcoding:
+    question: >
+        Suppose you originally had a page called `/aboutUs.php`, but decided to rename it
+        to `/about.php`. Simple: you rename the file, and you're done! Unfortunately, a lot
+        of other sites are still linking to `/aboutUs.php`, and any user clicking those links
+        are getting an error.
+
+        So, you decide to re-create `aboutUs.php`, and just make it redirect to `/about.php`.
+        Fill in the logic to redirect to `/about.php`.
+
+        **Note**: You won't see any output, because redirects actually return a blank response.
+        In the real world, your browser would quickly make a second request to `about.php`
+        (and you'd see that page).
+    step: ~
+    files:
+        aboutUs.php: ~
+        about.php:
+            read_only: true
+    features:
+        editor: ~
+        browser:
+            default_uri: /aboutUs.php
+    grading:
+        look_for_header:
+            type: php
+            assertTrue: input("aboutUs.php") matches "/header(/"
+            failure: Use the `header()` function to redirect
+        look_for_location:
+            type: php
+            assertTrue: input("aboutUs.php") matches "/Location:/"
+            failure: Set the `Location:` header to `/about.php`
+
+artofredirecting_redirectresponsemc:
+    question: >
+        Which of the following best shows the raw response that's sent back
+        when we redirect a user from a page?
+    explanation: >
+        The goal of our code is *always* to send a response message back to the user. Normally,
+        we don't think about this: we're just sending back HTML. But in reality, a response
+        is made up of multiple parts, including the content and headers.
+
+        When we redirect, what we're actually doing is setting a `Location` header on the
+        response. The status code - something we haven't talked about much - is also always
+        set to 301 or 302. Answer (A) is technically correct, but misleading: this contains
+        some HTML content in the response. This will never be shown to your user, because
+        the user's browser will immediately see the `Location` header and change the URL
+        in their browser to be this page.
+    features:
+        multiple_choice:
+            choices:
+                a: >
+                    ```
+                    HTTP/1.1 302 Found
+                    Location: /thanks.php
+                    <h1>Thanks for adding a new toy!</h1>
+                    ```
+                b: >
+                    ```
+                    HTTP/1.1 302 Found
+                    Location: /thanks.php
+                    ```
+                c: >
+                    ```
+                    GET /new_toy.php
+                    Host: localhost:8000
+                    <h1>Add a new toy</h1>
+                    ```
+                d: >
+                    ```
+                    POST /new_toy.php
+                    Location: /new_toy.php
+                    ```
+            correct: b
+    grading: []
